feat(api): refactor trends query to support multiple categories and formats
- Remove deprecated TrendVideoContentResponse and obsolete GraphQL query
- Introduce VideoContentTrendsInput/Response types for flexible trend requests
- Implement category-specific trend handling in MainstreamService and AnimeService
- Add validation components and structured exceptions for trend requests
- Update TmdbClient/AniListClient to work with updated trend results
- Migrate to single videoContentTrends field with category/format parameters
- Update integration tests and GraphQL schema with new trends structure